<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>cz.nkp.urnnbn</groupId>
        <artifactId>czidlo</artifactId>
        <version>4.6.1</version>
        <!--TODO: upgrade to maven 3.5 might fix this-->
        <!--<version>${czidlo_version}</version>-->
    </parent>

    <artifactId>web</artifactId>
    <name>CZIDLO - web</name>
    <packaging>pom</packaging>
    <!--<version>${czidlo_version}</version>-->
    <version>4.6.1</version>

    <modules>
        <module>web_shared</module>
        <module>web_server</module>
        <module>web_client</module>
    </modules>

    <properties>
        <!--following properties must be defined in every module: -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <!--following properties must be defined at top-level and in every module that can be built on it's own: -->
        <czidlo_version>4.6.1</czidlo_version>
        <!--following properties are relevant ony for this module and it's submodules: -->
        <!--<gwtVersion>2.7.0</gwtVersion>-->
        <!--<gwtVersion>2.8.1</gwtVersion>-->
        <gwtVersion>2.8.2</gwtVersion>
        <!--see https://stackoverflow.com/questions/33653943/codehaus-mojo-gwt-maven-plugin-project-fails-to-compile-->
        <!--<maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>-->
        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
        <tomcat.webport>8082</tomcat.webport>
        <tomcat.ajpport>8182</tomcat.ajpport>
        <tomcat.context>/web</tomcat.context>
    </properties>

    <build>

        <!-- https://github.com/steinsag/gwt-maven-example -->
        <defaultGoal>clean install tomcat7:run-war-only</defaultGoal>

        <plugins>

            <plugin>
                <!--https://gwt-maven-plugin.github.io/gwt-maven-plugin/-->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${gwtVersion}</version>
                <configuration>
                    <!-- for Super Dev Mode, otherwise java.lang.outofmemoryerror -->
                    <extraJvmArgs>-Xmx2048M -Xms1024M -Xss1024k</extraJvmArgs>
                    <sourceLevel>1.8</sourceLevel>
                    <logLevel>INFO</logLevel>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.3</version>
            </plugin>

           <!-- <plugin>
                &lt;!&ndash; Without this maven compiler sometimes uses java 1.3.
                    See http://stackoverflow.com/questions/7597950/maven-error-generics-are-not-supported-in-source-1-3-i-am-using-1-6 &ndash;&gt;
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                &lt;!&ndash;<version>2.5.1</version>&ndash;&gt;
                <version>3.1</version>
                <configuration>
                    &lt;!&ndash; <source>1.5</source> &ndash;&gt;
                    &lt;!&ndash; <target>1.5</target> &ndash;&gt;
                    &lt;!&ndash; <source>1.7</source> &ndash;&gt;
                    &lt;!&ndash; <target>1.7</target> &ndash;&gt;
                    &lt;!&ndash; <source>1.8</source> &ndash;&gt;
                    &lt;!&ndash; <target>1.8</target> &ndash;&gt;
                    &lt;!&ndash; <fork>true</fork> &ndash;&gt;
                    &lt;!&ndash; <meminitial>1024m</meminitial> &ndash;&gt;
                    &lt;!&ndash; <maxmem>2024m</maxmem> &ndash;&gt;
                </configuration>
            </plugin>-->
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.0</version>
                <configuration>
                    <path>${tomcat.context}</path>
                    <port>${tomcat.webport}</port>
                    <ajpPort>${tomcat.ajpport}</ajpPort>
                    <systemProperties>
                        <JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>
                    </systemProperties>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>${gwtVersion}</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwtVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.7</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
            <!-- <scope>test</scope> -->
        </dependency>

        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
            <classifier>sources</classifier>
            <!-- <scope>test</scope> -->
        </dependency>

    </dependencies>


</project>
